フォルダ構造からの相対パスに変更